clear canvas button

--- a/chrome-extension/huddle_popup.html
+++ b/chrome-extension/huddle_popup.html
@@ -15,6 +15,7 @@
       <h4>Huddle Board</h4>
       <canvas id="huddle-canvas" width="300" height="300" keepalive="true"></canvas>
       <button id="pin-canvas" class="btn-danger" type="button">Pin Canvas</button>
+      <button id="clear-canvas" class="btn-warning" type="button">Clear Canvas</button>
     </div>
 
     <script src="lib/js/paper-core.min.js"></script>
