input drawing name

--- a/chrome-extension/huddle_popup.html
+++ b/chrome-extension/huddle_popup.html
@@ -14,6 +14,10 @@
     <div class="text-center">
       <h4>Huddle Board</h4>
       <canvas id="huddle-canvas" width="300" height="300" keepalive="true"></canvas>
+      <form class="mb-2 inline-form">
+        <label for="drawing">Name: </label>
+        <input id="name-input" type="text" name="drawing">
+      </form>
       <button id="pin-canvas" class="btn-danger" type="button">Pin Canvas</button>
       <button id="clear-canvas" class="btn-warning" type="button">Clear Canvas</button>
     </div>
