--- a/chrome-extension/huddle_popup.html
+++ b/chrome-extension/huddle_popup.html
@@ -20,6 +20,10 @@
       </form>
       <button id="pin-canvas" class="btn-danger" type="button">Pin Canvas</button>
       <button id="clear-canvas" class="btn-warning" type="button">Clear Canvas</button>
+      <button id="black" style="background-color: black;height: 15px" type="button"/>
+      <button id="red" style="background-color: red;height: 15px" type="button"/>
+      <button id="green" style="background-color: green;height: 15px" type="button"/>
+      <button id="blue" style="background-color: blue;height: 15px" type="button"/>
     </div>
 
     <script src="lib/js/paper-core.min.js"></script>
