--- a/chrome-extension/huddle_popup.html
+++ b/chrome-extension/huddle_popup.html
@@ -20,6 +20,7 @@
       </form>
       <button id="pin-canvas" class="btn-danger" type="button">Pin Canvas</button>
       <button id="clear-canvas" class="btn-warning" type="button">Clear Canvas</button>
+      <button id="white" style="background-color: white;height: 14px;border:1px solid black;" type="button"/>
       <button id="black" style="background-color: black;height: 15px" type="button"/>
       <button id="red" style="background-color: red;height: 15px" type="button"/>
       <button id="green" style="background-color: green;height: 15px" type="button"/>
